alignments margins fixed of some sections

--- a/styles/style.css
+++ b/styles/style.css
@@ -142,6 +142,7 @@ html {
   font-family: "Inter", sans-serif;
   font-size: 2.2rem;
   font-weight: 500;
+  line-height: 150%;
 }
 .plant-card-price {
   font-weight: 700;
@@ -162,7 +163,7 @@ html {
   gap: 60px;
   align-items: center;
   margin-top: 83px;
-  margin-bottom: 130px;
+  margin-bottom: 13px;
 }
 .plants-lover-imgs {
   position: relative;
@@ -191,6 +192,9 @@ html {
 }
 .latest-deal-title {
   margin-bottom: 16px;
+}
+.latest-deal-text {
+  margin-bottom: 51px;
 }
 .latest-deal-cards {
   display: grid;
@@ -260,7 +264,8 @@ html {
 /* join section */
 
 .join {
-  background-image: url(../assets/news-letter-bg.png);
+  background: linear-gradient(rgba(7, 51, 79, 0.4), rgba(7, 51, 79, 0.4)),
+    url(../assets/news-letter-bg.png);
   min-height: 533px;
   /* width: 100%; */
   background-repeat: no-repeat;
@@ -271,6 +276,7 @@ html {
   align-items: center;
   margin: 0 auto;
   margin-top: 120px;
+  max-width: 1440px;
 }
 .join-title {
   color: #ffffff;
@@ -280,7 +286,6 @@ html {
 
 .join-email {
   height: 50px;
-  width: calc(100% - 178.31px - 20px);
   padding-left: 20px;
   border: none;
   font-family: "Inter", sans-serif;
@@ -292,6 +297,9 @@ html {
   width: calc(100% - 610px);
   min-width: 321px;
   max-width: 1140px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 /* footer section */
@@ -328,6 +336,9 @@ html {
 .footer-left {
   max-width: 359px;
 }
+.footer-left img {
+  margin-bottom: 16px;
+}
 
 @media screen and (max-width: 576px) {
   /* mobile nav section */
@@ -344,6 +355,7 @@ html {
   /* mobile main section */
   .main {
     margin-top: 28px;
+    gap: 65px;
   }
 
   /* mobile banner section */
@@ -356,13 +368,16 @@ html {
   }
   .banner-title,
   .plants-title,
-  .plants-lover-title {
+  .plants-lover-title,
+  .latest-deal-title {
     font-size: 2.4rem;
   }
   .banner-description,
   .plants-description,
-  .plants-lover-list-item {
+  .plants-lover-list-item,
+  .latest-deal-description {
     font-size: 1.4rem;
+    color: rgba(0, 0, 0, 0.5);
   }
   .banner-flower {
     width: 100%;
@@ -374,6 +389,9 @@ html {
     grid-template-columns: repeat(2, 1fr);
     margin: 0 16px;
   }
+  .btn-plant {
+    padding: 19px 30px;
+  }
   .plants-description {
     max-width: 90%;
   }
@@ -382,6 +400,7 @@ html {
     flex-direction: column;
     max-width: 90%;
     margin: 18px auto;
+    margin-bottom: 78px;
   }
   .plants-lover-img {
     width: 100%;
@@ -391,11 +410,18 @@ html {
   }
 
   /* mobile latest deal section */
+
   .latest-deal-cards {
     grid-template-columns: repeat(1, 1fr);
     height: auto;
-    grid-template-rows: repeat(3, 180px);
+    /* grid-template-rows: repeat(3, 180px); */
     margin: auto 16px;
+  }
+  .latest-deal-cards div {
+    min-height: 180px;
+  }
+  .latest-deal-cards div h3 {
+    margin-top: 20px;
   }
 
   .latest-deal-zabo {
@@ -433,9 +459,7 @@ html {
   .btn-sub {
     padding: 19px 12px;
   }
-  .join-email {
-    width: calc(218.69px - 20px);
-  }
+
   .join {
     min-height: 276px;
     margin-top: 40px;
@@ -445,6 +469,7 @@ html {
   .footer {
     flex-direction: column;
     gap: 20px;
+    margin-left: 20px;
   }
   .footer-list-1 {
     margin-bottom: 12px;
